<resources>
    <string name="app_name">Weathy</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="no_data">Нет данных</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="night">Ночь</string>
    <string name="temperature">Температура</string>
    <string name="pressure_format">%d мм рт. ст.</string>
    <string name="humidity_format">%d%%</string>
    <string name="feels_like">Ощущается как</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="wind">Ветер</string>
    <string name="server_unreachable">Сервер недоступен. Проверьте интернет-соединение.</string>
    <string name="refresh_tip">Потяните вниз, чтобы обновить</string>
</resources>
